--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJXHoRw6f7SuuH-YHHV5M03aa3wrL6SRA" type="text/javascript"></script>
 
 </head>
 <body>
